# kv-aware-scheduling

./: .env.example  .gitignore  README.md  policy.json  pyproject.toml  requirements.txt
configs/: base.yaml
configs/experiments/: experimental_design.md  suite.yaml  實驗設計.docx
configs/latency/: README.md  fitted_gpu_profiles.yaml
configs/scenarios/: Design Space Positioning.docx  S1_cloud.docx  S1_cloud.yaml  S1_kv_vs_load.docx  S1_kv_vs_load.yaml  S2_edge_cloud.docx  S2_edge_cloud.yaml  S2_prompt_length.docx  S2_prompt_length.yaml  S3_hetero_gpu.docx  S3_hetero_gpu.yaml  S3_phase_ratio.docx  S3_phase_ratio.yaml  S4_network_scan.docx  S4_network_scan.yaml  S5_hysteresis_horizon.docx  S5_hysteresis_horizon.yaml  S6_hetero_gpu.docx  S6_hetero_gpu.yaml  真實場景確認.docx
configs/scenarios2/: S1_kv_vs_load_rtx.yaml  S2_edge_cloud_rtx.yaml  S2_prompt_length_rtx.yaml  S3_phase_ratio_rtx.yaml  S4_network_scan_rtx.yaml  S5_hysteresis_horizon_rtx.yaml  S6_hetero_gpu_rtx.yaml
configs/schedulers/: kv_heuristic.yaml  kv_only.yaml  load_only.yaml
docs/design/: README.md
docs/paper/: README.md
docs/proposal/: README.md
experiments/: run_batch.py
kvsched/: cli.py
kvsched/config/: loader.txt  schemas.txt
kvsched/evaluation/: compare_modes.py  plots.py  plots_s1s6.py
kvsched/experiments/: matrix.py  run_batch.py  run_one.py
kvsched/latency/: analytic.py  fit.py  gpu_profiles.py
kvsched/models/: __init__.py  notation.py
kvsched/scheduler/: registry.py
scripts/: export_tables.sh  profile_gpu.sh  run_local.sh  run_sweep.sh
tests/: test_models.py
(+39 files in other folders)
