[project]
name = "kvsched"
version = "0.1.0"
description = "KV-aware scheduling research scaffold for distributed LLM inference"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6,<3",
  "PyYAML>=6.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
